# msae-plantseg-public

./: .gitignore  README.md  pyproject.toml
configs/: msae_default.json  standard_sae_default.json
results/: msae_log.json  standard_log.json
results/eval_results/: layer6_fallback_diagnostic.json  mi_disease.npy  mi_species.npy  msae_selectivity_disease.csv  msae_selectivity_disease_iou.npy  msae_selectivity_species.csv  neuron_selectivity_disease.csv  neuron_selectivity_species.csv  pca_k256_selectivity_disease.csv  pca_k768_selectivity_species.csv  standard_selectivity_disease.csv  standard_selectivity_species.csv
results/figures/: selectivity_comparison.csv
src/msae/: _config.py  _manifest.py  baselines.py  cli.py  data.py  evaluate.py  extraction.py  models.py  train.py  visualize.py
tests/: conftest.py  test_baselines.py  test_cli.py  test_data.py  test_evaluate.py  test_extraction.py  test_sae.py  test_sparse_parity.py  test_train.py  test_visualize.py
